working on footer

--- a/css/style.css
+++ b/css/style.css
@@ -34,3 +34,14 @@ body {
     width: calc(2 * ((100% - 3 * 6rem) / 4) + 6rem); }
   .row .col-3-of-4 {
     width: calc(3 * ((100% - 3 * 6rem) / 4) + 2 * 6rem); }
+
+.footer {
+  background-color: #000;
+  padding: 10rem 0;
+  font-size: 1.4rem;
+  color: #FFF; }
+  .footer__logo-box {
+    text-align: center; }
+  .footer__logo {
+    width: 15rem;
+    height: auto; }
