--- a/css/style.css
+++ b/css/style.css
@@ -45,3 +45,12 @@ body {
   .footer__logo {
     width: 15rem;
     height: auto; }
+
+.fab {
+  color: #FFF;
+  font-size: 2em;
+  padding: .5em; }
+
+.fas {
+  color: #FFF;
+  font-size: 2em; }
