--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -13,3 +13,15 @@
         height: auto;
     }
 }
+
+.fab{
+    color: $color-white;
+    font-size: 2em;
+    padding: .5em;
+}
+
+.fas{
+    color: $color-white;
+    font-size: 2em;
+}
+
