--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,6 +7,8 @@
 @import "base/typography";
 @import "base/utilities";
 
+@import"components/tech-box";
+
 @import "layout/header";
 @import "layout/grid";
 @import "layout/footer";
