--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,16 @@ body {
   letter-spacing: 2px;
   transition: all .2s; }
 
+.heading-projects {
+  color: #FFF;
+  font-size: 3.5rem;
+  text-transform: uppercase;
+  font-weight: 700;
+  display: inline-block;
+  -webkit-background-clip: text;
+  letter-spacing: 2px;
+  transition: all .2s; }
+
 .heading-tertiary {
   font-size: 1.6rem;
   font-weight: 700;
@@ -140,3 +150,7 @@ body {
 .fas-footer {
   color: #FFF;
   font-size: 2em; }
+
+.section-projects {
+  background-color: #000;
+  padding: 25rem 0 15rem 0; }
