--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -11,6 +11,19 @@
 
 }
 
+.heading-projects{
+    color: $color-white;
+    font-size: 3.5rem;
+    text-transform: uppercase;
+    font-weight: 700;
+    display: inline-block;
+    // background-image: linear-gradient(to right, $color-primary-light, $color-primary-dark);
+    -webkit-background-clip: text;
+    letter-spacing: 2px;
+    transition: all .2s;
+
+}
+
 .heading-tertiary{
     font-size: $default-font-size;
     font-weight: 700;
