--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,6 +8,8 @@
 @import "base/utilities";
 
 @import"components/tech-box";
+@import"components/card";
+
 
 @import "layout/header";
 @import "layout/grid";
