--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -55,20 +55,36 @@
         border-top-right-radius: 3px;
 
 
+        &--0{
+            background-image:url(../img/Project-0.png);
+            height: 22rem;
+        }
+
         &--1{
             background-image:url(../img/Project-1.png);
             height: 22rem;
         }
         &--2{
-            background-image:url(../img/nat-6.jpg);
-            height: 23rem;
+            background-image:url(../img/Project-2.png);
+            height: 22rem;
 
         }
         &--3{
-            background-image:url(../img/nat-7.jpg);
-            height: 23rem;
+            background-image:url(../img/Project-3.png);
+            height: 22rem;
 
         }
+        &--4{
+            background-image:url(../img/Project-4.png);
+            height: 22rem;
+
+        }
+        &--5{
+            background-image:url(../img/Project-5.png);
+            height: 22rem;
+
+        }
+
     }
 
     &__heading{
