--- a/css/style.css
+++ b/css/style.css
@@ -193,6 +193,21 @@ body {
   .card__price-only {
     font-size: 1.4rem; }
 
+.header__logo-box {
+  position: absolute;
+  top: 4rem;
+  left: 4rem; }
+
+.header__logo {
+  height: 3.5rem; }
+
+.header__text-box {
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center; }
+
 .row {
   max-width: 114rem;
   margin: 0 auto; }
