--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -28,4 +28,38 @@
         transform: translate(-50%, -50%);
         text-align: center;
     }
+
+    &--ul{
+        position: fixed;
+        top: 0;
+        width: 100%;
+        color: white;
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+        background-color: $color-black;
+        height: 32px;
+        z-index: 5;
+
+    }
+    &--li{
+        float: left;
+        color: white;
+    }
+
+    li a{
+        display: block;
+        color: white;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+        font-size: 20px;
+        margin: -10px;
+    }
+
+    li a:hover{
+        background-color: #111;
+    }
+
 }
