--- a/css/style.css
+++ b/css/style.css
@@ -290,7 +290,7 @@ body {
   .navigation__icon, .navigation__icon::before, .navigation__icon::after {
     width: 3rem;
     height: 2px;
-    background-color: #FFF;
+    background-color: grey;
     display: inline-block; }
   .navigation__icon::before, .navigation__icon::after {
     content: "";
