--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -108,7 +108,7 @@
         &::after {
             width: 3rem;
             height: 2px;
-            background-color: $color-white;
+            background-color: grey;
             display: inline-block;
         }
 
