--- a/css/style.css
+++ b/css/style.css
@@ -102,9 +102,15 @@ body {
 
 .u-margin-bottom-big {
   margin-bottom: 8rem !important; }
+  @media (max-width: 56.25em) {
+    .u-margin-bottom-big {
+      margin-bottom: 5rem !important; } }
 
 .u-margin-bottom-medium {
   margin-bottom: 4rem !important; }
+  @media (max-width: 56.25em) {
+    .u-margin-bottom-medium {
+      margin-bottom: 3rem !important; } }
 
 .u-marin-bottom-small {
   margin-bottom: 1.5rem !important; }
@@ -123,6 +129,9 @@ body {
   border-radius: 3px;
   box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
   transition: transform .3s; }
+  @media (max-width: 56.25em) {
+    .tech-box {
+      padding: 2rem; } }
   .tech-box__icon {
     font-size: 6rem;
     margin-bottom: .5rem;
@@ -130,6 +139,9 @@ body {
     background-image: linear-gradient(to right, #FFF, #000);
     -webkit-background-clip: text;
     color: transparent; }
+    @media (max-width: 56.25em) {
+      .tech-box__icon {
+        margin-bottom: 0; } }
   .tech-box:hover {
     transform: translateY(-1.5rem) scale(1.03); }
 
@@ -411,6 +423,9 @@ body {
       padding: 8rem 0; } }
   .footer__logo-box {
     text-align: center; }
+    @media (max-width: 56.25em) {
+      .footer__logo-box {
+        margin-bottom: 6rem; } }
   .footer__logo {
     width: 15rem;
     height: auto; }
@@ -429,3 +444,6 @@ body {
 .section-projects {
   background-color: #000;
   padding: 25rem 0 15rem 0; }
+  @media (max-width: 56.25em) {
+    .section-projects {
+      padding: 20rem 0; } }
