--- a/css/style.css
+++ b/css/style.css
@@ -232,6 +232,35 @@ body {
     font-weight: 100; }
   .card__price-only {
     font-size: 1.4rem; }
+  @media (max-width: 56.25em) {
+    .card {
+      color: black;
+      height: auto;
+      border-radius: 3px;
+      background-color: #FFF;
+      box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15); }
+      .card__side {
+        height: auto;
+        position: relative; }
+        .card__side--back {
+          transform: rotateY(0);
+          clip-path: polygon(0 15%, 100% 0, 100% 100%, 0 100%); }
+      .card:hover .card__side--front {
+        transform: rotateY(0); }
+      .card__details {
+        padding: 1rem 3rem; }
+      .card__cta {
+        position: relative;
+        top: 0%;
+        left: 0%;
+        transform: translate(0);
+        width: 100%;
+        padding-top: 7rem; }
+      .card__price-box {
+        margin-bottom: 3rem;
+        color: #000; }
+      .card__price-value {
+        font-size: 4rem; } }
 
 .header__logo-box {
   position: absolute;
