--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -84,6 +84,11 @@
             height: 22rem;
 
         }
+        &--6{
+            background-image:url(../img/Project-6.png);
+            height: 22rem;
+
+        }
 
     }
 
