--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -90,6 +90,12 @@
 
         }
 
+        &--7{
+            background-image:url(../img/Project-7.png);
+            height: 22rem;
+
+        }
+
     }
 
     &__heading{
