--- a/css/style.css
+++ b/css/style.css
@@ -195,6 +195,9 @@ body {
     .card__picture--6 {
       background-image: url(../img/Project-6.png);
       height: 22rem; }
+    .card__picture--7 {
+      background-image: url(../img/Project-7.png);
+      height: 22rem; }
   .card__heading {
     font-size: 2.8rem;
     font-weight: 300;
